Rename Scope to SymbolMapping and Context to Scope
Make it more consistent to the definition of the language

--- a/gcc/tiny/Make-lang.in
+++ b/gcc/tiny/Make-lang.in
@@ -63,8 +63,8 @@ tiny_OBJS = \
     tiny/tiny-token.o \
     tiny/tiny-lexer.o \
     tiny/tiny-symbol.o \
+    tiny/tiny-symbol-mapping.o \
     tiny/tiny-scope.o \
-    tiny/tiny-context.o \
     tiny/tiny-convert.o \
     $(END)
 
